<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUser"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hintUser"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPass"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hintContrasenia"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/botonLogin"
        android:id="@+id/btLog"
        android:layout_gravity="center_horizontal"
        android:onClick="logear"
        android:layout_marginTop="15dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" />
</LinearLayout>